implemented shelter authentication and error handler interceptor
